cabal-version:      3.4

-- Newer versions complain
name:               anglo
version:            0.2.0.0
homepage:           https://github.com/danwdart/projects#readme
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         cabal@dandart.co.uk
copyright:          2019 Dan Dart
category:           Web
build-type:         Simple
extra-source-files: README.md

library
  hs-source-dirs:     lib
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , aeson        ^>=2.2.3.0
    -- , base         ^>=4.20.0.0
    , bytestring   ^>=0.12.2.0
    , containers   ^>=0.7
    , MonadRandom  ^>=0.6.1
    , mtl          ^>=2.3.1

  exposed-modules:
  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags

common shared-properties
  hs-source-dirs:     src
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  -- build-depends:      base ^>=4.20.0.0
  ghc-options:
    -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-missing-local-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-unrecognised-warning-flags

  ghcjs-options:      -dedupe

executable anglo
  import:        shared-properties
  main-is:       Main.hs
  build-depends:
    , aeson      ^>=2.2.3.0
    -- , anglo      ^>=0.2.0.0
    , base       ^>=4.20.0.0
    , bytestring ^>=0.12.2.0
    , text       ^>=2.1.2

executable anglo-dev
  import:         shared-properties
  ghc-options:    -Wwarn
  hs-source-dirs: lib src
  main-is:        Main.hs
  other-modules:
  build-depends:
    , aeson        ^>=2.2.3.0
    , base         ^>=4.20.0.0
    , bytestring   ^>=0.12.2.0
    -- , containers   ^>=0.7
    -- , MonadRandom  ^>=0.6.1
    -- , mtl          ^>=2.3.1
    , text         ^>=2.1.2

test-suite anglo-test
  import:             shared-properties
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    -- , anglo       ^>=0.2.0.0
    -- , base        ^>=4.20.0.0
    , hspec       ^>=2.11.10
    -- , QuickCheck  ^>=2.15.0.1

  build-tool-depends: hspec-discover:hspec-discover

-- , hspec-core ^>=2.11.10
-- , hspec-expectations ^>=0.8.4
